; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/taskmgr/extr_graphctl.c_GraphCtrl_Paint.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/taskmgr/extr_graphctl.c_GraphCtrl_Paint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32*, i32* }

@SRCCOPY = common dso_local global i32 0, align 4
@SRCPAINT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GraphCtrl_Paint(%struct.TYPE_3__* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = call i32* @CreateCompatibleDC(i32* %10)
  store i32* %11, i32** %7, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = call i64 @CreateCompatibleBitmap(i32* %12, i32 %15, i32 %18)
  store i64 %19, i64* %8, align 8
  %20 = load i32*, i32** %7, align 8
  %21 = load i64, i64* %8, align 8
  %22 = call i64 @SelectObject(i32* %20, i64 %21)
  store i64 %22, i64* %9, align 8
  %23 = load i32*, i32** %7, align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %25, label %60

25:                                               ; preds = %3
  %26 = load i32*, i32** %7, align 8
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 8
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 3
  %35 = load i32*, i32** %34, align 8
  %36 = load i32, i32* @SRCCOPY, align 4
  %37 = call i32 @BitBlt(i32* %26, i32 0, i32 0, i32 %29, i32 %32, i32* %35, i32 0, i32 0, i32 %36)
  %38 = load i32*, i32** %7, align 8
  %39 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 8
  %45 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 2
  %47 = load i32*, i32** %46, align 8
  %48 = load i32, i32* @SRCPAINT, align 4
  %49 = call i32 @BitBlt(i32* %38, i32 0, i32 0, i32 %41, i32 %44, i32* %47, i32 0, i32 0, i32 %48)
  %50 = load i32*, i32** %6, align 8
  %51 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %52 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %51, i32 0, i32 1
  %53 = load i32, i32* %52, align 4
  %54 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %55 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %54, i32 0, i32 0
  %56 = load i32, i32* %55, align 8
  %57 = load i32*, i32** %7, align 8
  %58 = load i32, i32* @SRCCOPY, align 4
  %59 = call i32 @BitBlt(i32* %50, i32 0, i32 0, i32 %53, i32 %56, i32* %57, i32 0, i32 0, i32 %58)
  br label %60

60:                                               ; preds = %25, %3
  %61 = load i32*, i32** %7, align 8
  %62 = load i64, i64* %9, align 8
  %63 = call i64 @SelectObject(i32* %61, i64 %62)
  %64 = load i64, i64* %8, align 8
  %65 = call i32 @DeleteObject(i64 %64)
  %66 = load i32*, i32** %7, align 8
  %67 = call i32 @DeleteDC(i32* %66)
  ret void
}

declare dso_local i32* @CreateCompatibleDC(i32*) #1

declare dso_local i64 @CreateCompatibleBitmap(i32*, i32, i32) #1

declare dso_local i64 @SelectObject(i32*, i64) #1

declare dso_local i32 @BitBlt(i32*, i32, i32, i32, i32, i32*, i32, i32, i32) #1

declare dso_local i32 @DeleteObject(i64) #1

declare dso_local i32 @DeleteDC(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
